--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,8 @@
         const user = await response.json();
         console.log(JSON.stringify(user));
 
-        document.getElementById('name').textContent = user.name ? user.name : 'John Ivanov';
-        document.getElementById('email').textContent = user.email ? user.email : 'john.doe@gmail.com';
+        document.getElementById('name').textContent = user.name ? user.name : 'John Smith';
+        document.getElementById('email').textContent = user.email ? user.email : 'john.Smith@gmail.com';
         document.getElementById('interests').textContent = user.interests ? user.interests : 'coding';
 
         const cont = document.getElementById('container');
